[package]
name = "tbb-sys"
version = "1.0.2+2021.5.0"
edition = "2021"
description = "Intel Threading Building Blocks"
license = "Apache-2.0"
homepage = "https://oneapi-src.github.io/oneTBB/"
repository = "https://github.com/risc0/tbb-sys"
links = "tbb"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
glob = "0.3"
